examples/storybook/.storybook/styles.css
@import '~angular-instantsearch/bundles/instantsearch-theme-algolia.css';

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 14px;
  margin: 10px;
}

.ais-container {
  position: relative;
  padding: 50px 40px 40px;
}

.ais-container::after {
  font-size: 13px;
  top: 0;
  left: 0;
  color: #999999;
  padding: 4px 6px;
  line-height: 1em;
  position: absolute;
  background-color: #f3f3f3;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 1px 1px 0;
}

.ais-container-preview {
  border: solid 1px #e4e4e4;
  border-radius: 5px 5px 0px 0px;
}

.ais-container-preview::after {
  content: 'Preview';
  border-radius: 4px 0 0;
}

.preview-spacer {
  margin-bottom: 10px;
}

.ais-container-playground {
  border-left: solid 1px #e4e4e4;
  border-right: solid 1px #e4e4e4;
  border-bottom: solid 1px #e4e4e4;
  display: flex;
}

.ais-container-playground::after {
  content: 'Playground';
}

.panel-right {
  flex: 1;
}

.panel-right .ais-Stats {
  margin-top: 5px;
  font-style: italic;
}

.playground-hits {
  list-style: none;
  padding: 0;
  margin: 25px 0;
}

.playground-hits-item {
  display: flex;
  align-items: center;
  margin-bottom: 25px;
}

.playground-hits-item:last-child {
  margin-bottom: 0;
}

.playground-hits-image {
  width: 100px;
  height: 100px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  flex-shrink: 0;
}

.playground-hits-desc {
  margin-left: 25px;
}

.playground-hits-desc > p {
  margin: 0 0 10px;
}

.playground-hits-desc > p:last-child {
  margin: 0;
}

input {
  border-style: solid !important;
  border-width: 1px;
  border-color: #c4c8d8;
  border-radius: 5px !important;
}

button {
  border-style: solid !important;
  border-width: 1px;
  padding: 0.2em;
  border-color: black;
  border-radius: 5px !important;
}

button:disabled {
  border-color: #c4c8d8;
}

